[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/aseprite/bg.png" type="Texture" id=1]
[ext_resource path="res://assets/aseprite/back-button.png" type="Texture" id=2]
[ext_resource path="res://assets/aseprite/back-button-pressed.png" type="Texture" id=3]
[ext_resource path="res://scripts/OptionsMenu.gd" type="Script" id=4]
[ext_resource path="res://assets/aseprite/option-title.png" type="Texture" id=5]
[ext_resource path="res://assets/aseprite/options-menu.png" type="Texture" id=6]
[ext_resource path="res://scenes/OptionRow.tscn" type="PackedScene" id=7]

[node name="OptionsMenu" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="."]
margin_left = 109.144
margin_top = 151.885
margin_right = 201.144
margin_bottom = 169.885
focus_neighbour_top = NodePath("../Menu/VBoxContainer/SpeedRunTimerOption")
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionTitle" type="TextureRect" parent="."]
margin_left = 110.032
margin_top = 8.3091
margin_right = 199.032
margin_bottom = 28.3091
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureRect" parent="."]
margin_left = 64.0978
margin_top = 33.216
margin_right = 248.098
margin_bottom = 143.216
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolumeOption" parent="Menu/VBoxContainer" instance=ExtResource( 7 )]
focus_neighbour_bottom = NodePath("../FXVolumeOption")
focus_mode = 2
option_name = "Music Volume"

[node name="FXVolumeOption" parent="Menu/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 20.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../MusicVolumeOption")
focus_neighbour_bottom = NodePath("../SpeedRunTimerOption")
focus_mode = 2
option_name = "FX Volume"

[node name="SpeedRunTimerOption" parent="Menu/VBoxContainer" instance=ExtResource( 7 )]
margin_top = 40.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../FXVolumeOption")
focus_neighbour_bottom = NodePath("../../../BackButton")
focus_mode = 2
option_name = "Speed Run Timer"
option_type = 1
bool_value = true
[connection signal="focus_entered" from="BackButton" to="." method="_on_BackButton_focus_entered"]
[connection signal="focus_exited" from="BackButton" to="." method="_on_BackButton_focus_exited"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="focus_entered" from="Menu/VBoxContainer/MusicVolumeOption" to="." method="_on_MusicVolumeOption_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/MusicVolumeOption" to="." method="_on_MusicVolumeOption_focus_exited"]
[connection signal="percentage_changed" from="Menu/VBoxContainer/MusicVolumeOption" to="." method="_on_MusicVolumeOption_percentage_changed"]
[connection signal="focus_entered" from="Menu/VBoxContainer/FXVolumeOption" to="." method="_on_FXVolumeOption_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/FXVolumeOption" to="." method="_on_FXVolumeOption_focus_exited"]
[connection signal="percentage_changed" from="Menu/VBoxContainer/FXVolumeOption" to="." method="_on_FXVolumeOption_percentage_changed"]
[connection signal="focus_entered" from="Menu/VBoxContainer/SpeedRunTimerOption" to="." method="_on_SpeedRunTimerOption_focus_entered"]
[connection signal="focus_exited" from="Menu/VBoxContainer/SpeedRunTimerOption" to="." method="_on_SpeedRunTimerOption_focus_exited"]
[connection signal="on_off_changed" from="Menu/VBoxContainer/SpeedRunTimerOption" to="." method="_on_SpeedRunTimerOption_on_off_changed"]
